Add a from_env method to SmtpOptions
This mimics what was previously done in PostgresOptions to instantiate
the configuration from environment variables.

While doing this, add tests for PostgresOptions, which did not have any.

--- a/lettre/Cargo.toml
+++ b/lettre/Cargo.toml
@@ -27,3 +27,4 @@ features = ["builder", "hostname", "pool", "rustls-tls", "smtp-transport", "toki
 
 [dev-dependencies]
 iii-iv-core = { path = "../core", features = ["testutils"] }
+temp-env = "0.3.2"
