--- a/postgres/Cargo.toml
+++ b/postgres/Cargo.toml
@@ -24,3 +24,4 @@ env_logger = "0.8"
 rand = "0.8"
 tokio = { version = "1", features = ["macros"] }
 iii-iv-core = { path = "../core", features = ["internal", "testutils"] }
+temp-env = "0.3.2"
