--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -40,4 +40,5 @@ tower = { version = "0.4", optional = true }
 
 [dev-dependencies]
 paste = "1.0"
+temp-env = "0.3.2"
 tokio = { version = "1", features = ["macros"] }
