--- a/geo/Cargo.toml
+++ b/geo/Cargo.toml
@@ -13,6 +13,7 @@ testutils = []
 [dependencies]
 async-trait = "0.1"
 bytes = "1.0"
+derivative = "2.2"
 log = "0.4"
 lru_time_cache = "0.11"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
@@ -23,4 +24,5 @@ iii-iv-core = { path = "../core" }
 [dev-dependencies]
 iii-iv-core = { path = "../core", features = ["testutils"] }
 serde_test = "1"
+temp-env = "0.3.2"
 tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
