--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -40,5 +40,6 @@ tower = { version = "0.4", optional = true }
 
 [dev-dependencies]
 paste = "1.0"
+serde_test = "1"
 temp-env = "0.3.2"
 tokio = { version = "1", features = ["macros"] }
