--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -37,6 +37,7 @@ serde_json = "1"
 thiserror = "1.0"
 time = "0.3"
 tower = { version = "0.4", optional = true }
+url = "2.3"
 
 [dev-dependencies]
 paste = "1.0"
