--- a/geo/Cargo.toml
+++ b/geo/Cargo.toml
@@ -14,6 +14,7 @@ testutils = []
 async-trait = "0.1"
 bytes = "1.0"
 derivative = "2.2"
+futures = "0.3"
 log = "0.4"
 lru_time_cache = "0.11"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
