--- a/lettre/Cargo.toml
+++ b/lettre/Cargo.toml
@@ -8,12 +8,13 @@ publish = false
 
 [features]
 default = []
-testutils = []
+testutils = ["dep:futures"]
 
 [dependencies]
 async-trait = "0.1"
 axum = "0.6"
 derivative = "2.2"
+futures = { version = "0.3", optional = true }
 http = "0.2.8"
 serde_json = "1"
 thiserror = "1.0"
