--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,6 +17,7 @@ testutils = [
     "dep:mime",
     "dep:paste",
     "dep:regex",
+    "dep:serde_urlencoded",
     "dep:tower",
 ]
 
@@ -34,6 +35,7 @@ paste = { version = "1.0", optional = true }
 regex = { version = "1", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_urlencoded = { version = "0.7", optional = true }
 thiserror = "1.0"
 time = "0.3"
 tower = { version = "0.4", optional = true }
