--- a/sqlite/Cargo.toml
+++ b/sqlite/Cargo.toml
@@ -15,11 +15,12 @@ async-trait = "0.1"
 derivative = "2.2"
 env_logger = { version = "0.8", optional = true }
 futures = "0.3"
+iii-iv-core = { path = "../core" }
 serde_json = "1"
 sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"] }
-iii-iv-core = { path = "../core" }
+time = "0.3"
 
 [dev-dependencies]
 env_logger = "0.8"
-tokio = { version = "1", features = ["macros"] }
 iii-iv-core = { path = "../core", features = ["internal", "testutils"] }
+tokio = { version = "1", features = ["macros"] }
