Fold the sqlite and postgres crates into core
Separating the sqlite and postgres features into separate crates makes
it difficult to expose a unified interface from the core library.
Furthermore, other crates in the tree, such as the queue crate and the
upcoming changes to the authn crate, end up having to expose features
of their own to select between the two databases... so keeping their
implementations in separate crates wasn't as nice as it sounded.

As a result, merge the two crates into the core and expose them via
features.  This makes the core crate even more complex feature-wise
but I think it'll simplify things overall.

--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -25,9 +25,7 @@ url = { version = "2.3", features = ["serde"] }
 
 [dependencies.iii-iv-core]
 path = "../core"
-
-[dependencies.iii-iv-postgres]
-path = "../postgres"
+features = ["postgres"]
 
 [dependencies.derive_more]
 version = "0.99.0"
@@ -36,12 +34,4 @@ features = ["as_ref", "constructor"]
 
 [dev-dependencies.iii-iv-core]
 path = "../core"
-features = ["testutils"]
-
-[dev-dependencies.iii-iv-postgres]
-path = "../postgres"
-features = ["testutils"]
-
-[dev-dependencies.iii-iv-sqlite]
-path = "../sqlite"
-features = ["testutils"]
+features = ["sqlite", "testutils"]
