--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,14 +8,17 @@ publish = false
 
 [features]
 default = []
-internal = []
+postgres = ["dep:futures", "dep:regex", "sqlx/postgres", "sqlx/runtime-tokio-rustls"]
+sqlite = ["dep:futures", "sqlx/sqlite", "sqlx/runtime-tokio-rustls"]
 testutils = [
     "dep:base64",
     "dep:bytes",
+    "dep:env_logger",
     "dep:http-body",
     "dep:hyper",
     "dep:mime",
     "dep:paste",
+    "dep:rand",
     "dep:regex",
     "dep:serde_urlencoded",
     "dep:tower",
@@ -27,22 +30,28 @@ axum = "0.6"
 base64 = { version = "0.21", optional = true }
 bytes = { version = "1.0", optional = true }
 derivative = "2.2"
+env_logger = { version = "0.8", optional = true }
+futures = { version = "0.3", optional = true }
 http = "0.2.8"
 http-body = { version = "0.4", optional = true }
 hyper = { version = "0.14", optional = true, features = ["full"] }
 mime = { version = "0.3", optional = true }
 paste = { version = "1.0", optional = true }
+rand = { version = "0.8", optional = true }
 regex = { version = "1", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_urlencoded = { version = "0.7", optional = true }
+sqlx = "0.7"
 thiserror = "1.0"
 time = "0.3"
 tower = { version = "0.4", optional = true }
 url = "2.3"
 
 [dev-dependencies]
+env_logger = "0.8"
 paste = "1.0"
+rand = "0.8"
 serde_test = "1"
 temp-env = "0.3.2"
 tokio = { version = "1", features = ["macros"] }
