Expose the authn driver TestContext
Some of its features are necessary to write tests against the generic
authn functionality.

--- a/authn/Cargo.toml
+++ b/authn/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 default = ["postgres"]
 postgres = ["iii-iv-core/postgres", "sqlx/postgres"]
 sqlite = ["dep:futures", "iii-iv-core/sqlite", "sqlx/sqlite"]
-testutils = ["dep:url"]
+testutils = ["dep:url", "iii-iv-core/sqlite", "iii-iv-core/testutils", "iii-iv-lettre/testutils"]
 
 [dependencies]
 async-trait = "0.1"
