Properly shut down DB pools on drop
Fix the database pool wrappers so that they call close on drop and
wait for the close to complete, or else the close may do nothing.

While doing this, make the wrappers not cloneable as there isn't
a need for them to be any more.

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,7 +17,12 @@ postgres = [
     "sqlx/postgres",
     "sqlx/runtime-tokio-rustls",
 ]
-sqlite = ["dep:futures", "sqlx/sqlite", "sqlx/runtime-tokio-rustls"]
+sqlite = [
+    "dep:futures",
+    "dep:tokio",
+    "sqlx/sqlite",
+    "sqlx/runtime-tokio-rustls",
+]
 testutils = [
     "dep:base64",
     "dep:bytes",
