Add a geolocator based by the IP-API free tier
Because of the limitations of the free tier, this new geolocator is
backed by another geolocator that can provide answers when the free
tier quota is exhausted.

To make this possible, this change adds a new SettableClock fake
clock for testing purposes, which is much nicer to use than the older
MonotonicClock.

Additionally, this change also adds a RequestCounter to keep track of
how many requests have been sent.  I'm keeping this in the geo crate
for now, but this type of request counter should likely be placed in
the core crate; will do so when the need arises.

--- a/geo/Cargo.toml
+++ b/geo/Cargo.toml
@@ -15,15 +15,17 @@ async-trait = "0.1"
 bytes = "1.0"
 derivative = "2.2"
 futures = "0.3"
+iii-iv-core = { path = "../core" }
 log = "0.4"
 lru_time_cache = "0.11"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
 serde = "1"
 serde_json = "1"
-iii-iv-core = { path = "../core" }
+time = "0.3"
 
 [dev-dependencies]
 iii-iv-core = { path = "../core", features = ["testutils"] }
 serde_test = "1"
 temp-env = "0.3.2"
+time = { version = "0.3", features = ["macros"] }
 tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
