--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,41 @@ members = [
     "queue",
 ]
 resolver = "2"
+
+[workspace.dependencies]
+async-session = "3"
+async-trait = "0.1"
+axum = "0.6"
+base64 = "0.21"
+bcrypt = "0.14"
+bytes = "1.0"
+derivative = "2.2"
+derive-getters = "0.2.0"
+derive_more = { version = "0.99.0", default-features = false }
+env_logger = "0.8"
+futures = "0.3"
+http = "0.2.8"
+http-body = "0.4"
+hyper = { version = "0.14", features = ["full"] }
+lettre = { version = "0.10.0-rc.6", default-features = false }
+log = "0.4"
+lru_time_cache = "0.11"
+mime = "0.3"
+paste = "1.0"
+quoted_printable = "0.5"
+rand = "0.8"
+regex = "1"
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
+serde_json = "1"
+serde_test = "1"
+serde_urlencoded = "0.7"
+serde = { version = "1", features = ["derive"] }
+sqlx = "0.7"
+temp-env = "0.3.2"
+thiserror = "1.0"
+time = "0.3"
+tokio = "1"
+tower = "0.4"
+tower-http = { version = "0.3", features = ["cors"] }
+url = "2.3"
+uuid = { version = "1.0", default-features = false, features = ["serde", "std", "v4"] }
