--- a/authn/Cargo.toml
+++ b/authn/Cargo.toml
@@ -13,36 +13,36 @@ sqlite = ["iii-iv-core/sqlite", "sqlx/sqlite"]
 testutils = ["dep:url", "iii-iv-core/sqlite", "iii-iv-core/testutils", "iii-iv-lettre/testutils"]
 
 [dependencies]
-async-trait = "0.1"
-axum = "0.6"
-base64 = "0.21"
-bcrypt = "0.14"
-derivative = "2.2"
-futures = "0.3"
-log = "0.4"
-http = "0.2.8"
+async-trait = { workspace = true }
+axum = { workspace = true }
+base64 = { workspace = true }
+bcrypt = { workspace = true }
+derivative = { workspace = true }
+futures = { workspace = true }
+http = { workspace = true }
 iii-iv-core = { path = "../core" }
 iii-iv-lettre = { path = "../lettre" }
-lru_time_cache = "0.11"
-rand = "0.8"
-serde = { version = "1", features = ["derive"] }
-serde_urlencoded = "0.7"
-time = "0.3"
-url = { version = "2.3", optional = true }
+log = { workspace = true }
+lru_time_cache = { workspace = true }
+rand = { workspace = true }
+serde_urlencoded = { workspace = true }
+serde = { workspace = true }
+time = { workspace = true }
+url = { workspace = true, optional = true }
 
 [dependencies.sqlx]
-version = "0.7"
+workspace = true
 optional = true
 features = ["runtime-tokio-rustls", "time"]
 
 [dev-dependencies]
-futures = "0.3"
+futures = { workspace = true }
 iii-iv-core = { path = "../core", features = ["sqlite", "testutils"] }
 iii-iv-lettre = { path = "../lettre", features = ["testutils"] }
-temp-env = "0.3.2"
-tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
-url = "2.3"
+temp-env = { workspace = true }
+tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
+url = { workspace = true }
 
 [dev-dependencies.sqlx]
-version = "0.7"
+workspace = true
 features = ["runtime-tokio-rustls", "sqlite", "time"]
