--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -38,35 +38,35 @@ testutils = [
 ]
 
 [dependencies]
-async-trait = "0.1"
-axum = "0.6"
-base64 = { version = "0.21", optional = true }
-bytes = { version = "1.0", optional = true }
-derivative = "2.2"
-env_logger = { version = "0.8", optional = true }
-futures = { version = "0.3", optional = true }
-http = "0.2.8"
-http-body = { version = "0.4", optional = true }
-hyper = { version = "0.14", optional = true, features = ["full"] }
-log = { version = "0.4", optional = true }
-mime = { version = "0.3", optional = true }
-paste = { version = "1.0", optional = true }
-rand = { version = "0.8", optional = true }
-regex = { version = "1", optional = true }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-serde_urlencoded = { version = "0.7", optional = true }
-sqlx = "0.7"
-thiserror = "1.0"
-time = "0.3"
-tokio = { version = "1", optional = true }
-tower = { version = "0.4", optional = true }
-url = "2.3"
+async-trait = { workspace = true }
+axum = { workspace = true }
+base64 = { workspace = true, optional = true }
+bytes = { workspace = true, optional = true }
+derivative = { workspace = true }
+env_logger = { workspace = true, optional = true }
+futures = { workspace = true, optional = true }
+http-body = { workspace = true, optional = true }
+http = { workspace = true }
+hyper = { workspace = true, optional = true }
+log = { workspace = true, optional = true }
+mime = { workspace = true, optional = true }
+paste = { workspace = true, optional = true }
+rand = { workspace = true, optional = true }
+regex = { workspace = true, optional = true }
+serde_json = { workspace = true }
+serde_urlencoded = { workspace = true, optional = true }
+serde = { workspace = true }
+sqlx = { workspace = true }
+thiserror = { workspace = true }
+time = { workspace = true }
+tokio = { workspace = true, optional = true }
+tower = { workspace = true, optional = true }
+url = { workspace = true }
 
 [dev-dependencies]
-env_logger = "0.8"
-paste = "1.0"
-rand = "0.8"
-serde_test = "1"
-temp-env = "0.3.2"
-tokio = { version = "1", features = ["macros"] }
+env_logger = { workspace = true }
+paste = { workspace = true }
+rand = { workspace = true }
+serde_test = { workspace = true }
+temp-env = { workspace = true }
+tokio = { workspace = true, features = ["macros"] }
