--- a/smtp/Cargo.toml
+++ b/smtp/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "iii-iv-lettre"
+name = "iii-iv-smtp"
 version = "0.0.0"
 description = "III-IV: SMTP support"
 authors = ["Julio Merino <julio@meroh.net>"]
