--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,9 @@ on: [push, pull_request]
 jobs:
     lint:
         runs-on: ubuntu-latest
+        env:
+            RUSTC_WRAPPER: "sccache"
+            SCCACHE_GHA_ENABLED: "true"
         steps:
             - uses: actions-rs/toolchain@v1
               with:
@@ -18,6 +21,7 @@ jobs:
                   default: true
                   components: clippy, rustfmt
             - uses: actions/checkout@v2
+            - uses: mozilla-actions/sccache-action@v0.0.3
             - run: sudo apt update
             - run: sudo apt install pre-commit
             - run: make lint
@@ -31,8 +35,11 @@ jobs:
             PGSQL_TEST_DATABASE: ${{ secrets.PGSQL_TEST_DATABASE }}
             PGSQL_TEST_USERNAME: ${{ secrets.PGSQL_TEST_USERNAME }}
             PGSQL_TEST_PASSWORD: ${{ secrets.PGSQL_TEST_PASSWORD }}
+            RUSTC_WRAPPER: "sccache"
+            SCCACHE_GHA_ENABLED: "true"
         steps:
             - uses: actions/checkout@v2
+            - uses: mozilla-actions/sccache-action@v0.0.3
             - run: make test-individually
 
     test-workspace:
@@ -44,6 +51,9 @@ jobs:
             PGSQL_TEST_DATABASE: ${{ secrets.PGSQL_TEST_DATABASE }}
             PGSQL_TEST_USERNAME: ${{ secrets.PGSQL_TEST_USERNAME }}
             PGSQL_TEST_PASSWORD: ${{ secrets.PGSQL_TEST_PASSWORD }}
+            RUSTC_WRAPPER: "sccache"
+            SCCACHE_GHA_ENABLED: "true"
         steps:
             - uses: actions/checkout@v2
+            - uses: mozilla-actions/sccache-action@v0.0.3
             - run: make test-workspace
