Support microsecond precision in SettableClock

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -70,4 +70,5 @@ paste = { workspace = true }
 rand = { workspace = true }
 serde_test = { workspace = true }
 temp-env = { workspace = true }
+time = { workspace = true, features = ["macros"] }
 tokio = { workspace = true, features = ["macros"] }
