Extend Clock with a sleep method
This is to allow certain tests that require sleeping to yield and
make time pass to do it via a fake clock instead of by having to
actually pause execution.

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,14 +13,12 @@ postgres = [
     "dep:log",
     "dep:rand",
     "dep:regex",
-    "dep:tokio",
     "sqlx/postgres",
     "sqlx/runtime-tokio-rustls",
 ]
 sqlite = [
     "dep:futures",
     "dep:log",
-    "dep:tokio",
     "sqlx/sqlite",
     "sqlx/runtime-tokio-rustls",
 ]
@@ -60,7 +58,7 @@ serde = { workspace = true }
 sqlx = { workspace = true }
 thiserror = { workspace = true }
 time = { workspace = true }
-tokio = { workspace = true, optional = true }
+tokio = { workspace = true }
 tower = { workspace = true, optional = true }
 url = { workspace = true }
 
