--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ on: [push, pull_request]
 jobs:
     lint:
         runs-on: ubuntu-latest
+        timeout-minutes: 15
         env:
             RUSTC_WRAPPER: "sccache"
             SCCACHE_GHA_ENABLED: "true"
@@ -28,6 +29,7 @@ jobs:
 
     test-individually:
         runs-on: ubuntu-latest
+        timeout-minutes: 15
         env:
             AZURE_MAPS_KEY: ${{ secrets.AZURE_MAPS_KEY }}
             PGSQL_TEST_HOST: ${{ secrets.PGSQL_TEST_HOST }}
@@ -44,6 +46,7 @@ jobs:
 
     test-workspace:
         runs-on: ubuntu-latest
+        timeout-minutes: 15
         env:
             AZURE_MAPS_KEY: ${{ secrets.AZURE_MAPS_KEY }}
             PGSQL_TEST_HOST: ${{ secrets.PGSQL_TEST_HOST }}
