Make db tests explicitly close the pool
This should stop the madness to attempt to close the pool on db drop,
which has never worked correctly and I haven't been able to fix.

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,6 +19,7 @@ postgres = [
 ]
 sqlite = [
     "dep:futures",
+    "dep:log",
     "dep:tokio",
     "sqlx/sqlite",
     "sqlx/runtime-tokio-rustls",
