--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,16 +15,16 @@ async-trait = "0.1"
 axum = "0.6"
 base64 = "0.21"
 bcrypt = "0.14"
-bytes = "1.0"
+bytes = "1.10"
 derivative = "2.2"
-derive-getters = "0.2.0"
-derive_more = { version = "0.99.0", default-features = false }
+derive-getters = "0.2.1"
+derive_more = { version = "0.99.19", default-features = false }
 env_logger = "0.8"
 futures = "0.3"
-http = "0.2.8"
+http = "0.2.12"
 http-body = "0.4"
 hyper = { version = "0.14", features = ["full"] }
-lettre = { version = "0.10.0-rc.6", default-features = false }
+lettre = { version = "0.10.4", default-features = false }
 log = "0.4"
 lru_time_cache = "0.11"
 mime = "0.3"
@@ -38,11 +38,11 @@ serde_test = "1"
 serde_urlencoded = "0.7"
 serde = { version = "1", features = ["derive"] }
 sqlx = "0.7"
-temp-env = "0.3.2"
+temp-env = "0.3.6"
 thiserror = "1.0"
 time = "0.3"
 tokio = "1"
 tower = "0.4"
 tower-http = { version = "0.3", features = ["cors"] }
-url = "2.3"
-uuid = { version = "1.0", default-features = false, features = ["serde", "std", "v4"] }
+url = "2.5"
+uuid = { version = "1.16", default-features = false, features = ["serde", "std", "v4"] }
