--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ resolver = "2"
 [workspace.dependencies]
 async-session = "3"
 async-trait = "0.1"
-axum = "0.6"
+axum = "0.7"
+axum-server = "0.7"
 base64 = "0.22"
 bcrypt = "0.17"
 bytes = "1.10"
@@ -21,9 +22,9 @@ derive-getters = "0.5.0"
 derive_more = { version = "2.0.1", default-features = false }
 env_logger = "0.11"
 futures = "0.3"
-http = "0.2.12"
-http-body = "0.4"
-hyper = { version = "0.14", features = ["full"] }
+http = "1.3.1"
+http-body = "1.0"
+hyper = { version = "1.6", features = ["full"] }
 lettre = { version = "0.11.15", default-features = false }
 log = "0.4"
 lru_time_cache = "0.11"
@@ -42,7 +43,7 @@ temp-env = "0.3.6"
 thiserror = "2.0"
 time = "0.3"
 tokio = "1"
-tower = "0.4"
-tower-http = { version = "0.3", features = ["cors"] }
+tower = "0.5"
+tower-http = { version = "0.6", features = ["cors"] }
 url = "2.5"
 uuid = { version = "1.16", default-features = false, features = ["serde", "std", "v4"] }
